<resources>
    <string name="app_name">android-gamesusados</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="to_enter">Entrar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="games">Games</string>
    <string name="to_add">Adicionar</string>
    <string name="settings">Configurações</string>
    <string name="my_announcements">Meus Anúncios</string>
    <string name="to_select">Selecionar</string>
    <string name="value">Valor</string>
    <string name="money_label">R$ </string>
    <string name="platform">Plataforma</string>
    <string name="to_change">Alterar</string>
    <string name="to_save">Salvar</string>
    <string name="name">Nome</string>
    <string name="type">Tipo</string>
    <string name="network_unauthorized_access">Verifique os dados de acesso e tente novamente</string>
    <string name="title_game_announcement">Game anunciado</string>
    <string name="logout_confirmation">Tem certeza que deseja sair?</string>
    <string name="logout">Logout</string>
    <string name="mobilephone">Celular</string>
    <string name="pending_approval">Aguardando\nAprovação</string>
    <string name="usertype_admin">Administrador</string>
    <string name="usertype_manager">Gerente</string>
    <string name="usertype_regular">Usuário</string>
    <string name="ask_lock_game_announcement">Tem certeza que deseja desativar o anúncio referente ao game \'%s\ do console \'%s\'?\n\nEsta ação poderá ser desfeita somente por um gerente.</string>
    <string name="input_confirm_password">Confirme a senha</string>
    <string name="input_password">Digite a senha</string>
    <string name="user_data">Dados do usuário</string>
    <string name="register">Cadastro</string>
    <string name="fullname">Nome completo</string>
    <string name="lgpd_phone">O seu telefone será compartilhado com outros usuários da plataforma</string>
    <string name="lgpd_email">O seu e-mail será compartilhado com outros usuários da plataforma</string>
    <string name="lgpd_fullname">O seu nome completo será compartilhado com outros usuários da plataforma</string>
    <string name="rule_password">Utilize uma senha com mais de 5 caracteres</string>
    <string name="rule_password_confirmation">Repita a senha</string>
    <string name="to_register">Cadastrar</string>
    <string name="register_success_title">Cadastro realizado</string>
    <string name="register_success">Seja bem-vindo ao app!</string>
    <string name="to_report">Denunciar</string>
    <string name="to_report_hint_game">O que há de errado com o conteúdo do jogo %s?</string>
    <string name="to_report_hint_announcement">O que há de errado com o anúncio do %s?</string>
    <string name="type_here">Digite aqui</string>
    <string name="to_report_game">jogo</string>
    <string name="to_report_announcement">anúncio</string>
    <string name="without_announcements">Sem anúncios, por enquanto!</string>
</resources>
