<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_home_tabs"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="br.com.jogosusados.features.search.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/addFragment"
        android:name="br.com.jogosusados.features.add.view.AddFragment"
        android:label="@string/to_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/myFragment"
        android:name="br.com.jogosusados.features.my.view.MyGamesAnnouncementsFragment"
        android:label="@string/my_announcements"
        tools:layout="@layout/fragment_my_games_announcements" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="br.com.jogosusados.features.settings.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
